# making_sentence

./: .flake8  .gitignore  .pre-commit-config.yaml  Home.py  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json  init.sh
.streamlit/: config.toml  secrets.toml.example
content/: mysql_talktree_dev.json
data/: insert_10000_word.sql  sample_sentence.json  word_10000.json
databases/: service.py
nltk_functions/: nltk_lemmatization.py  nltk_tokenizing.py
