[tool.poetry]
name = "makeSentence"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nltk = "^3.8.1"
sqlalchemy = "^2.0.29"
mysql = "^0.0.3"
mysql-connector-python = "^8.3.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"