[tool.poetry]
name = "makeSentence"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
nltk = "^3.8.1"
sqlalchemy = "^2.0.29"
mysql = "^0.0.3"
mysql-connector-python = "^8.3.0"
streamlit = ">=1.28"
anthropic = ">=0.3.0"
trubrics = ">=1.4.3"
streamlit-feedback = "^0.1.3"
streamlit-authenticator = "^0.3.1"
pandas = "^2.2.2"
st-annotated-text = "^4.0.1"
streamlit-audiorec = "^0.1.3"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"